--- a/MEINew/app/build.gradle
+++ b/MEINew/app/build.gradle
@@ -39,5 +39,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:cardview-v7:26.1.0'
     compile 'com.getkeepsafe.taptargetview:taptargetview:1.10.0'
-    debugCompile 'com.amitshekhar.android:debug-db:1.0.1'
+    //debugCompile 'com.amitshekhar.android:debug-db:1.0.1'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.slider:library:1.1.5@aar'
 }
