--- a/MEINew/app/src/main/AndroidManifest.xml
+++ b/MEINew/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCzgShMok9fg69DyoPwHohkYhEQC23tEK0" />
+
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -30,15 +35,12 @@
             android:label=""
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCzgShMok9fg69DyoPwHohkYhEQC23tEK0" />
-
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".TestVocacionalFragment"></activity>
+
+        <activity android:name=".TestVocacionalFragment" />
     </application>
 
 </manifest>
