--- a/MEINew/app/build.gradle
+++ b/MEINew/app/build.gradle
@@ -30,21 +30,21 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation 'com.google.firebase:firebase-messaging:12.0.1'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     testImplementation 'junit:junit:4.12'
-    compile 'com.google.android.gms:play-services-maps:11.8.0'
-    compile 'com.google.maps.android:android-maps-utils:0.4+'
-    compile 'com.google.android.gms:play-services-location:11.8.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.getkeepsafe.taptargetview:taptargetview:1.10.0'
-    compile 'com.daimajia.slider:library:1.1.5@aar'
-    debugCompile 'com.amitshekhar.android:debug-db:1.0.1'
-    compile 'com.twitter.sdk.android:twitter-core:3.1.1'
-    compile 'com.twitter.sdk.android:tweet-ui:3.1.1'
+    implementation 'com.google.android.gms:play-services-maps:12.0.1'
+    implementation 'com.google.maps.android:android-maps-utils:0.4.4'
+    implementation 'com.google.android.gms:play-services-location:12.0.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.10.0'
+    implementation 'com.daimajia.slider:library:1.1.5@aar'
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.1'
+    implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
+    implementation 'com.twitter.sdk.android:tweet-ui:3.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
