--- a/MEINew/app/src/main/AndroidManifest.xml
+++ b/MEINew/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:value="AIzaSyCzgShMok9fg69DyoPwHohkYhEQC23tEK0" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,20 +27,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoggedFragment"
+            android:name=".activity.LoggedActivity"
             android:label="@string/title_activity_logued_fragment"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".CareerActivity"
+            android:name=".activity.CareerActivity"
             android:label=""
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".activity.MapsActivity"
             android:label="@string/title_activity_maps"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name=".TestVocacionalFragment" />
+        <activity android:name=".fragment.logged.TestVocacionalFragment" />
     </application>
 
 </manifest>
