--- a/MEINew/app/src/main/AndroidManifest.xml
+++ b/MEINew/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:label="@string/title_activity_maps"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name=".fragment.logged.TestVocacionalFragment" />
+        <activity android:name=".activity.TestVocacionalActivity" />
     </application>
 
 </manifest>
