--- a/MEINew/app/src/main/AndroidManifest.xml
+++ b/MEINew/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
 
         <activity
             android:name=".activity.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,15 +28,18 @@
         </activity>
         <activity
             android:name=".activity.LoggedActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_logued_fragment"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.CareerActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label=""
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
             android:name=".activity.MapsActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_maps"
             android:theme="@style/AppTheme.NoActionBar" />
 
